First commited as before_60717_rev5