@@ -11,6 +11,7 @@
  *     Lars Vogel <Lars.Vogel@gmail.com> - Bug 422954
  *     Christian Georgi (SAP) - Bug 423882 - Warn user if workspace is newer than IDE
  *     Andrey Loskutov <loskutov@gmx.de> - Bug 427393, 455162
+ *     Patrik Suzzi <psuzzi@gmail.com> - Bug 514355
  *******************************************************************************/
 package org.eclipse.ui.internal.ide.application;
 
@@ -29,6 +30,7 @@ import org.eclipse.core.runtime.IExecutableExtension;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Platform;
 import org.eclipse.core.runtime.Status;
+import org.eclipse.core.runtime.jobs.Job;
 import org.eclipse.core.runtime.preferences.ConfigurationScope;
 import org.eclipse.equinox.app.IApplication;
 import org.eclipse.equinox.app.IApplicationContext;
@@ -82,17 +84,22 @@ public class IDEApplication implements IApplication, IExecutableExtension {
 
     private static final String PROP_EXIT_CODE = "eclipse.exitcode"; //$NON-NLS-1$
 
+	/**
+	 * Return value when the user wants to retry loading the current workspace
+	 */
+    private static final int RETRY_LOAD = 0;
+
     /**
      * A special return code that will be recognized by the launcher and used to
      * restart the workbench.
      */
-    private static final Integer EXIT_RELAUNCH = new Integer(24);
+	private static final Integer EXIT_RELAUNCH = Integer.valueOf(24);
 
     /**
      * A special return code that will be recognized by the PDE launcher and used to
      * show an error dialog if the workspace is locked.
      */
-    private static final Integer EXIT_WORKSPACE_LOCKED = new Integer(15);
+	private static final Integer EXIT_WORKSPACE_LOCKED = Integer.valueOf(15);
 
     /**
      * The ID of the application plug-in
@@ -108,6 +115,12 @@ public class IDEApplication implements IApplication, IExecutableExtension {
 
     @Override
 	public Object start(IApplicationContext appContext) throws Exception {
+		// Suspend the job manager to prevent background jobs from running. This
+		// is done to reduce resource contention during startup.
+		// The job manager will be resumed by the
+		// IDEWorkbenchAdvisor.postStartup method.
+		Job.getJobManager().suspend();
+
         Display display = createDisplay();
         // processor must be created before we start event loop
         DelayedEventsProcessor processor = new DelayedEventsProcessor(display);
@@ -257,8 +270,13 @@ public class IDEApplication implements IApplication, IExecutableExtension {
 				shell.setVisible(false);
 			}
 		}
+
+		int returnValue = -1;
+		URL workspaceUrl = null;
         while (true) {
-            URL workspaceUrl = promptForWorkspace(shell, launchData, force);
+			if (returnValue != RETRY_LOAD) {
+				workspaceUrl = promptForWorkspace(shell, launchData, force);
+			}
             if (workspaceUrl == null) {
 				return EXIT_OK;
 			}
@@ -299,8 +317,14 @@ public class IDEApplication implements IApplication, IExecutableExtension {
 
             // by this point it has been determined that the workspace is
             // already in use -- force the user to choose again
-            MessageDialog.openError(shell, IDEWorkbenchMessages.IDEApplication_workspaceInUseTitle,
-                    NLS.bind(IDEWorkbenchMessages.IDEApplication_workspaceInUseMessage, workspaceUrl.getFile()));
+			MessageDialog dialog = new MessageDialog(shell, IDEWorkbenchMessages.IDEApplication_workspaceInUseTitle,
+					null, NLS.bind(IDEWorkbenchMessages.IDEApplication_workspaceInUseMessage, workspaceUrl.getFile()),
+					MessageDialog.ERROR, 1, IDEWorkbenchMessages.IDEApplication_workspaceInUse_Retry,
+					IDEWorkbenchMessages.IDEApplication_workspaceInUse_Cancel);
+			// the return value influences the next loop's iteration
+			returnValue = dialog.open();
+			// Remember the locked workspace as recent workspace
+			launchData.writePersistedData();
         }
     }
 
