@@ -10,10 +10,10 @@
  *******************************************************************************/
 package org.eclipse.ui.about;
 
+import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
+
 import org.eclipse.jface.dialogs.DialogPage;
 import org.eclipse.swt.SWT;
-import org.eclipse.swt.events.SelectionAdapter;
-import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.widgets.Button;
 import org.eclipse.swt.widgets.Composite;
 
@@ -129,13 +129,8 @@ public abstract class InstallationPage extends DialogPage {
 	protected Button createButton(Composite parent, int id, String label) {
 		Button button = new Button(parent, SWT.PUSH);
 		button.setText(label);
-		button.setData(new Integer(id));
-		button.addSelectionListener(new SelectionAdapter() {
-			@Override
-			public void widgetSelected(SelectionEvent event) {
-				buttonPressed(((Integer) event.widget.getData()).intValue());
-			}
-		});
+		button.setData(Integer.valueOf(id));
+		button.addSelectionListener(widgetSelectedAdapter(event -> buttonPressed(((Integer) event.widget.getData()).intValue())));
 		container.registerPageButton(this, button);
 		return button;
 	}
