@@ -13,7 +13,6 @@
 package org.eclipse.ui.preferences;
 
 import java.io.IOException;
-
 import org.eclipse.core.commands.common.EventManager;
 import org.eclipse.core.runtime.Assert;
 import org.eclipse.core.runtime.Platform;
@@ -21,10 +20,9 @@ import org.eclipse.core.runtime.Plugin;
 import org.eclipse.core.runtime.SafeRunner;
 import org.eclipse.core.runtime.preferences.DefaultScope;
 import org.eclipse.core.runtime.preferences.IEclipsePreferences;
-import org.eclipse.core.runtime.preferences.IScopeContext;
 import org.eclipse.core.runtime.preferences.IEclipsePreferences.INodeChangeListener;
 import org.eclipse.core.runtime.preferences.IEclipsePreferences.NodeChangeEvent;
-import org.eclipse.core.runtime.preferences.IEclipsePreferences.PreferenceChangeEvent;
+import org.eclipse.core.runtime.preferences.IScopeContext;
 import org.eclipse.jface.preference.IPersistentPreferenceStore;
 import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.jface.resource.JFaceResources;
@@ -80,7 +78,7 @@ public class ScopedPreferenceStore extends EventManager implements
 	 * The default context is the context where getDefault and setDefault
 	 * methods will search. This context is also used in the search.
 	 */
-	private IScopeContext defaultContext = new DefaultScope();
+	private IScopeContext defaultContext = DefaultScope.INSTANCE;
 
 	/**
 	 * The nodeQualifer is the string used to look up the node in the contexts.
@@ -163,24 +161,21 @@ public class ScopedPreferenceStore extends EventManager implements
 	 */
 	private void initializePreferencesListener() {
 		if (preferencesListener == null) {
-			preferencesListener = new IEclipsePreferences.IPreferenceChangeListener() {
-				@Override
-				public void preferenceChange(PreferenceChangeEvent event) {
+			preferencesListener = event -> {
 
-					if (silentRunning) {
-						return;
-					}
-
-					Object oldValue = event.getOldValue();
-					Object newValue = event.getNewValue();
-					String key = event.getKey();
-					if (newValue == null) {
-						newValue = getDefault(key, oldValue);
-					} else if (oldValue == null) {
-						oldValue = getDefault(key, newValue);
-					}
-					firePropertyChangeEvent(event.getKey(), oldValue, newValue);
+				if (silentRunning) {
+					return;
 				}
+
+				Object oldValue = event.getOldValue();
+				Object newValue = event.getNewValue();
+				String key = event.getKey();
+				if (newValue == null) {
+					newValue = getDefault(key, oldValue);
+				} else if (oldValue == null) {
+					oldValue = getDefault(key, newValue);
+				}
+				firePropertyChangeEvent(event.getKey(), oldValue, newValue);
 			};
 			getStorePreferences().addPreferenceChangeListener(
 					preferencesListener);
@@ -205,7 +200,7 @@ public class ScopedPreferenceStore extends EventManager implements
 		if (obj instanceof String) {
 			return defaults.get(key, STRING_DEFAULT_DEFAULT);
 		} else if (obj instanceof Integer) {
-			return new Integer(defaults.getInt(key, INT_DEFAULT_DEFAULT));
+			return Integer.valueOf(defaults.getInt(key, INT_DEFAULT_DEFAULT));
 		} else if (obj instanceof Double) {
 			return new Double(defaults.getDouble(key, DOUBLE_DEFAULT_DEFAULT));
 		} else if (obj instanceof Float) {
@@ -312,8 +307,8 @@ public class ScopedPreferenceStore extends EventManager implements
 
 		// Assert that the default was not included (we automatically add it to
 		// the end)
-		for (int i = 0; i < scopes.length; i++) {
-			if (scopes[i].equals(defaultContext)) {
+		for (IScopeContext scope : scopes) {
+			if (scope.equals(defaultContext)) {
 				Assert
 						.isTrue(
 								false,
@@ -336,21 +331,19 @@ public class ScopedPreferenceStore extends EventManager implements
 			Object newValue) {
 		// important: create intermediate array to protect against listeners
 		// being added/removed during the notification
-		final Object[] list = getListeners();
-		if (list.length == 0) {
+		final Object[] listeners = getListeners();
+		if (listeners.length == 0) {
 			return;
 		}
-		final PropertyChangeEvent event = new PropertyChangeEvent(this, name,
-				oldValue, newValue);
-		for (int i = 0; i < list.length; i++) {
-			final IPropertyChangeListener listener = (IPropertyChangeListener) list[i];
-			SafeRunner.run(new SafeRunnable(JFaceResources
-					.getString("PreferenceStore.changeError")) { //$NON-NLS-1$
-						@Override
-						public void run() {
-							listener.propertyChange(event);
-						}
-					});
+		final PropertyChangeEvent event = new PropertyChangeEvent(this, name, oldValue, newValue);
+		for (Object listener : listeners) {
+			final IPropertyChangeListener propertyChangeListener = (IPropertyChangeListener) listener;
+			SafeRunner.run(new SafeRunnable(JFaceResources.getString("PreferenceStore.changeError")) { //$NON-NLS-1$
+				@Override
+				public void run() {
+					propertyChangeListener.propertyChange(event);
+				}
+			});
 		}
 	}
 
@@ -605,8 +598,7 @@ public class ScopedPreferenceStore extends EventManager implements
 				getStorePreferences().putInt(name, value);
 			}
 			dirty = true;
-			firePropertyChangeEvent(name, new Integer(oldValue), new Integer(
-					value));
+			firePropertyChangeEvent(name, Integer.valueOf(oldValue), Integer.valueOf(value));
 		} finally {
 			silentRunning = false;// Restart listening to preferences
 		}
