@@ -39,8 +39,7 @@ public class WorkbenchErrorHandler extends AbstractStatusHandler {
 
 	@Override
 	public void handle(final StatusAdapter statusAdapter, int style) {
-		statusAdapter.setProperty(WorkbenchStatusDialogManager.HINT,
-				new Integer(style));
+		statusAdapter.setProperty(WorkbenchStatusDialogManager.HINT, Integer.valueOf(style));
 		if (((style & StatusManager.SHOW) == StatusManager.SHOW)
 				|| ((style & StatusManager.BLOCK) == StatusManager.BLOCK)) {
 
@@ -49,22 +48,7 @@ public class WorkbenchErrorHandler extends AbstractStatusHandler {
 			if (Display.getCurrent() != null) {
 				showStatusAdapter(statusAdapter, block);
 			} else {
-				if (block) {
-					Display.getDefault().syncExec(new Runnable() {
-						@Override
-						public void run() {
-							showStatusAdapter(statusAdapter, true);
-						}
-					});
-
-				} else {
-					Display.getDefault().asyncExec(new Runnable() {
-						@Override
-						public void run() {
-							showStatusAdapter(statusAdapter, false);
-						}
-					});
-				}
+				Display.getDefault().asyncExec(() -> showStatusAdapter(statusAdapter, block));
 			}
 		}
 
